@@ -155,6 +155,7 @@ ImpressCMS ChangeLog
 * #52: Empty Custom Block - Xoops2.3 Upgrad. (stranger)
 * #259: Upgrade script from x2.2 and 2.3 for profile module. (stranger)
 * #263: Upgrade script from smartprofile for profile module. (stranger)
+* #264: function icms_copyr not working. (stranger)
 
 
 == Impresscms 1.1.2==
